syntax = "proto3";
option java_multiple_files = true;
package org.kim.grpc;

message OperationRequest {
    int64 operation   = 1;
    int64 keyLength   = 2;
    int64 key         = 3;
    int64 valueLength = 4;
    string value      = 5;
}

message OperationResponse {
    string response = 1;
    string value    = 2;
}

service OperationService {
    rpc makeOperationService(OperationRequest) returns (OperationResponse);
}